Fixing white space

--- a/style sheet.css
+++ b/style sheet.css
@@ -967,7 +967,7 @@ top: -40px;
     }
     #btn5{
         
-        margin-left: 20px;
+        
     }
     
     #conatain1{
